add play and pause

--- a/index.html
+++ b/index.html
@@ -24,24 +24,24 @@
   </head>
   <body onload="followMouse();">
     <main>
-      <video class="thinkspace-video" autoplay playsinline loop muted>
+      <video class="thinkspace-video" playsinline loop muted>
         <source src="public/thinkspace.mp4" type="video/mp4" />
         Your browser does not support HTML video.
       </video>
-      <video class="pixel-push-video" autoplay playsinline loop muted>
+      <video class="pixel-push-video" playsinline loop muted>
         <source src="public/pixel-push.mp4" type="video/mp4" />
         Your browser does not support HTML video.
       </video>
-      <video class="reading-trends-video" autoplay playsinline loop muted>
+      <video class="reading-trends-video" playsinline loop muted>
         <source src="public/reading-trends.mp4" type="video/mp4" />
         Your browser does not support HTML video.
       </video>
-      <video class="other-video" autoplay playsinline loop muted>
+      <video class="other-video" playsinline loop muted>
         <source src="public/other.mp4" type="video/mp4" />
         Your browser does not support HTML video.
       </video>
 
-      <video class="cv-video" autoplay playsinline loop muted>
+      <video class="cv-video" playsinline loop muted>
         <source src="public/cv.mp4" type="video/mp4" />
         Your browser does not support HTML video.
       </video>
