--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <a
         class="thinkspace"
         target="_blank"
-        href="https://medium.com/swlh/if-conversational-assistants-could-enhance-human-conversation-2cfb048cfc60"
+        href="https://www.notion.so/Thinkspace-24f3dc1c62904b0da412b0a4230cc92d"
         >Thinkspace</a
       ><br />
 
@@ -75,7 +75,7 @@
         href="https://design-portfolio-ft809uunh.vercel.app/"
         >Other</a
       >
-      <div>—</div>
+      <div class="dash">—</div>
       <a class="cv" target="_blank" href="/resume-zhang.pdf">CV</a>
     </footer>
 
