--- a/index.html
+++ b/index.html
@@ -46,11 +46,31 @@
         Your browser does not support HTML video.
       </video>
 
-      <p class="bio">Joseph is an interaction designer.</p>
+      <p class="bio">
+        Joseph is an interaction designer making stuff like
+        <a
+          class="pixel-push"
+          target="_blank"
+          href="https://www.notion.so/josephhhz/Pixel-Push-48910c3a971747b0b6fc3f31572b9984"
+          >this</a
+        >,
+        <a
+          class="reading-trends"
+          target="_blank"
+          href="https://www.notion.so/josephhhz/Reading-Trends-2c9be594b74c44e885724dc7a910e42e"
+          >this</a
+        >, and
+        <a
+          class="thinkspace"
+          target="_blank"
+          href="https://www.notion.so/Thinkspace-24f3dc1c62904b0da412b0a4230cc92d"
+          >this</a
+        >.
+      </p>
     </main>
 
     <footer>
-      <a
+      <!-- <a
         class="pixel-push"
         target="_blank"
         href="https://www.notion.so/josephhhz/Pixel-Push-48910c3a971747b0b6fc3f31572b9984"
@@ -67,16 +87,17 @@
         target="_blank"
         href="https://www.notion.so/Thinkspace-24f3dc1c62904b0da412b0a4230cc92d"
         >Thinkspace</a
-      ><br />
-
+      ><br /> -->
+      <a class="cv" target="_blank" href="/resume-zhang.pdf"> Resume</a>
+      <span>/</span>
       <a
         class="other"
         target="_blank"
         href="https://design-portfolio-ft809uunh.vercel.app/"
-        >Other</a
-      >
-      <div class="dash">—</div>
-      <a class="cv" target="_blank" href="/resume-zhang.pdf">CV</a>
+        >Other
+      </a>
+
+      <!-- <div class="dash">—</div> -->
     </footer>
 
     <div class="wrap">
