--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </video>
 
       <p class="bio">
-        Joseph is an interaction designer making stuff like
+        Joseph is an interaction designer making things like
         <a
           class="pixel-push"
           target="_blank"
@@ -89,13 +89,13 @@
         >Thinkspace</a
       ><br /> -->
       <a class="cv" target="_blank" href="/resume-zhang.pdf"> Resume</a>
-      <span>/</span>
-      <a
+      <!-- <span>/</span> -->
+      <!-- <a
         class="other"
         target="_blank"
         href="https://design-portfolio-ft809uunh.vercel.app/"
         >Other
-      </a>
+      </a> -->
 
       <!-- <div class="dash">—</div> -->
     </footer>
