--- a/index.html
+++ b/index.html
@@ -36,15 +36,23 @@
         <source src="public/reading-trends.mp4" type="video/mp4" />
         Your browser does not support HTML video.
       </video>
+      <video class="apple-video" playsinline loop muted>
+        <source src="public/apple.mp4" type="video/mp4" />
+        Your browser does not support HTML video.
+      </video>
+      <video class="natural-video" playsinline loop muted>
+        <source src="public/natural.mp4" type="video/mp4" />
+        Your browser does not support HTML video.
+      </video>
       <video class="other-video" playsinline loop muted>
         <source src="public/other.mp4" type="video/mp4" />
         Your browser does not support HTML video.
       </video>
 
-      <video class="cv-video" playsinline loop muted>
+      <!-- <video class="cv-video" playsinline loop muted>
         <source src="public/cv.mp4" type="video/mp4" />
         Your browser does not support HTML video.
-      </video>
+      </video> -->
 
       <p class="bio">
         Joseph is an interaction designer making things like
@@ -65,6 +73,13 @@
           target="_blank"
           href="https://www.notion.so/Thinkspace-24f3dc1c62904b0da412b0a4230cc92d"
           >this</a
+        >. Previously at
+        <a class="apple" target="_blank" href="https://www.apple.com/siri/"
+          >Apple</a
+        >
+        , he is now helping build
+        <a class="natural" target="_blank" href="https://www.natural.ai/"
+          >Natural AI</a
         >.
       </p>
     </main>
@@ -88,7 +103,7 @@
         href="https://www.notion.so/Thinkspace-24f3dc1c62904b0da412b0a4230cc92d"
         >Thinkspace</a
       ><br /> -->
-      <a class="cv" target="_blank" href="/resume-zhang.pdf"> Resume</a>
+      <!-- <a class="cv" target="_blank" href="/resume-zhang.pdf"> Resume</a> -->
       <!-- <span>/</span> -->
       <!-- <a
         class="other"
