--- a/index.html
+++ b/index.html
@@ -76,8 +76,7 @@
         >. Previously at
         <a class="apple" target="_blank" href="https://www.apple.com/siri/"
           >Apple</a
-        >
-        , he is now helping build
+        >, he is now helping build
         <a class="natural" target="_blank" href="https://www.natural.ai/"
           >Natural AI</a
         >.
