--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
       <!-- <div class="dash">—</div> -->
     </footer>
 
-    <div class="wrap">
+    <!-- <div class="wrap">
       <div class="ball"></div>
-    </div>
+    </div> -->
   </body>
   <script
     src="https://code.jquery.com/jquery-3.5.1.js"
