--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- Thanks for checking out my site. All video assets are rightfully owned. -->
+<!-- Thanks for checking out my site. Aside from the Siri and Natural AI animation, all videos are rightfully owned. -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -126,7 +126,7 @@
   ></script>
 
   <!-- <script src="script/ball.js"></script> -->
-  <!-- <script src="script/imageHover.js"></script> -->
+  <script src="script/imageHover.js"></script>
   <script>
     // jQuery(function ($) {
     //   $("a").hover(
