--- a/index.html
+++ b/index.html
@@ -56,28 +56,28 @@
       </video> -->
 
       <p class="bio">
-        Joseph is an interaction designer making things like
+        Joseph is a designer exploring
         <a
           class="pixel-push"
           target="_blank"
           href="https://www.notion.so/josephhhz/Pixel-Push-48910c3a971747b0b6fc3f31572b9984"
-          >this</a
+          >interaction</a
         >,
         <a
           class="reading-trends"
           target="_blank"
           href="https://www.notion.so/josephhhz/Reading-Trends-2c9be594b74c44e885724dc7a910e42e"
-          >this</a
+          >data</a
         >, and
         <a
           class="thinkspace"
           target="_blank"
           href="https://www.notion.so/Thinkspace-24f3dc1c62904b0da412b0a4230cc92d"
-          >this</a
+          >spatial interfaces</a
         >. Previously at
         <a class="apple" target="_blank" href="https://www.apple.com/siri/"
           >Apple</a
-        >, he is now helping build
+        >, he is now working on
         <a class="natural" target="_blank" href="https://www.natural.ai/"
           >Natural AI</a
         >.
