--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           class="thinkspace"
           target="_blank"
           href="https://www.notion.so/Thinkspace-24f3dc1c62904b0da412b0a4230cc92d"
-          >spatial interfaces</a
+          >conversation</a
         >. Previously at
         <a class="apple" target="_blank" href="https://www.apple.com/siri/"
           >Apple</a
