--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         >. Previously at
         <a class="apple" target="_blank" href="https://www.apple.com/siri/"
           >Apple</a
-        >, he is now working on
+        >, he is now helping build
         <a class="natural" target="_blank" href="https://www.natural.ai/"
           >Natural AI</a
         >.
