add expanded page

--- a/expanded.html
+++ b/expanded.html
@@ -1,5 +1,3 @@
-<!-- Thanks for checking out my site! The Siri and Natural AI animations are pulled from their respective sites. All other videos are rightfully owned. -->
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -23,7 +21,6 @@
     <link rel="stylesheet" href="https://use.typekit.net/srk5tly.css" />
   </head>
 
-  <!-- <body onload="followMouse();"> -->
   <body>
     <main>
       <video class="thinkspace-video" playsinline loop muted>
@@ -38,55 +35,77 @@
         <source src="public/reading-trends.mp4" type="video/mp4" />
         Your browser does not support HTML video.
       </video>
-      <video class="apple-video" playsinline loop muted>
-        <source src="public/apple.mp4" type="video/mp4" />
-        Your browser does not support HTML video.
-      </video>
-      <video class="natural-video" playsinline loop muted>
-        <source src="public/natural.mp4" type="video/mp4" />
-        Your browser does not support HTML video.
-      </video>
+      <img class="elevation-church-img" src="public/elevation-church.jpg" />
+      <img class="cmu-design-img" src="public/cmu-design.jpg" />
+      <img class="hci-img" src="public/hci.jpg" />
+      <img class="plume-img" src="public/plume.jpg" />
       <!-- <video class="other-video" playsinline loop muted>
         <source src="public/other.mp4" type="video/mp4" />
         Your browser does not support HTML video.
       </video> -->
-      <div class="landing">
-        <p>
-          Joseph is a designer exploring
+
+      <p>
+        Joseph is a third year undergraduate studying
+        <a
+          class="cmu-design"
+          target="blank"
+          href="https://design.cmu.edu/programs/undergrad"
+          >Design</a
+        >
+        and
+        <a class="hci" target="blank" href="https://www.hcii.cmu.edu"
+          >Human Computer Interaction</a
+        >
+        at Carnegie Mellon University.
+      </p>
+
+      <br />
+      <!-- additional work -->
+      <a class="arrow" href="index.html">↑</a>
+      <div class="work">
+        <br /><br />
+
+        <p>Work</p>
+        <div class="projects">
           <a
             class="pixel-push"
             target="_blank"
             href="https://www.notion.so/josephhhz/Pixel-Push-48910c3a971747b0b6fc3f31572b9984"
-            >interaction</a
-          >,
+            >Pixel Push</a
+          >
+          <br />
           <a
             class="reading-trends"
             target="_blank"
             href="https://www.notion.so/josephhhz/Reading-Trends-2c9be594b74c44e885724dc7a910e42e"
-            >data</a
-          >, and
+            >Reading Trends</a
+          >
+          <br />
           <a
             class="thinkspace"
             target="_blank"
             href="https://www.notion.so/Thinkspace-24f3dc1c62904b0da412b0a4230cc92d"
-            >conversation</a
-          >. Previously at
-          <a class="apple" target="blank" href="https://www.apple.com/siri/"
-            >Apple</a
-          >, he is now helping build
-          <a class="natural" target="_blank" href="https://www.natural.ai/"
-            >Natural AI</a
-          >.
-        </p>
-        <br />
-      </div>
-      <div class="work">
-        <a href="expanded.html">↓</a>
+            >Thinkspace</a
+          >
+          <br />
+          <a
+            class="elevation-church"
+            target="_blank"
+            href="https://www.notion.so/Elevation-Connect-ac95e52bf2794c74b95f29810c11a089"
+            >Elevation Church</a
+          ><br />
+          <!-- <a
+            class="plume"
+            target="_blank"
+            href="https://www.notion.so/josephhhz/Reading-Trends-2c9be594b74c44e885724dc7a910e42e"
+            >Plume Assistant</a
+          > -->
+        </div>
       </div>
     </main>
 
     <!-- <div class="wrap">
-      <div class="landing ball"></div>
+      <div class="ball"></div>
     </div> -->
   </body>
   <script
