--- a/expanded.html
+++ b/expanded.html
@@ -44,7 +44,7 @@
         Your browser does not support HTML video.
       </video> -->
 
-      <p>
+      <p class="education">
         Joseph is a third year undergraduate studying
         <a
           class="cmu-design"
@@ -105,6 +105,9 @@
       </div>
     </main>
 
+    <footer>
+      <a>josephzhang@cmu.edu</a>
+    </footer>
     <!-- <div class="wrap">
       <div class="ball"></div>
     </div> -->
