--- a/expanded.html
+++ b/expanded.html
@@ -35,10 +35,20 @@
         <source src="public/reading-trends.mp4" type="video/mp4" />
         Your browser does not support HTML video.
       </video>
+      <video class="apple-video" playsinline loop muted>
+        <source src="public/apple.mp4" type="video/mp4" />
+        Your browser does not support HTML video.
+      </video>
+      <video class="natural-video" playsinline loop muted>
+        <source src="public/natural.mp4" type="video/mp4" />
+        Your browser does not support HTML video.
+      </video>
       <img class="elevation-church-img" src="public/elevation-church.jpg" />
+      <img class="elevation-connect-img" src="public/elevation-connect.jpg" />
       <img class="cmu-design-img" src="public/cmu-design.jpg" />
       <img class="hci-img" src="public/hci.jpg" />
       <img class="plume-img" src="public/plume.jpg" />
+
       <!-- <video class="other-video" playsinline loop muted>
         <source src="public/other.mp4" type="video/mp4" />
         Your browser does not support HTML video.
@@ -67,7 +77,7 @@
 
         <p>Work</p>
 
-        <div class="projects">
+        <div class="indent">
           <a
             class="pixel-push"
             target="_blank"
@@ -87,26 +97,47 @@
             target="_blank"
             href="https://www.notion.so/Thinkspace-24f3dc1c62904b0da412b0a4230cc92d"
             >Thinkspace</a
+          ><br />
+          <a
+            class="elevation-connect"
+            target="_blank"
+            href="https://www.notion.so/Elevation-Connect-ac95e52bf2794c74b95f29810c11a089"
+            >Elevation Connect</a
           >
           <br />
+          <a style="cursor: not-allowed" class="natural">Natural AI</a>
+          <br />
+          <a style="cursor: not-allowed" class="plume">Plume Assistant</a>
+        </div>
+        <br />
+        <p>Experience</p>
+        <div class="indent">
+          <a class="apple" target="blank" href="https://www.apple.com/siri/"
+            >Apple</a
+          ><br />
+          <a class="natural" target="_blank" href="https://www.natural.ai/"
+            >Brain Technologies</a
+          ><br />
           <a
             class="elevation-church"
             target="_blank"
-            href="https://www.notion.so/Elevation-Connect-ac95e52bf2794c74b95f29810c11a089"
+            href="https://www.elevationchurch.org/"
             >Elevation Church</a
           ><br />
-          <!-- <a
-            class="plume"
-            target="_blank"
-            href="https://www.notion.so/josephhhz/Reading-Trends-2c9be594b74c44e885724dc7a910e42e"
-            >Plume Assistant</a
-          > -->
         </div>
       </div>
     </main>
 
-    <footer>
-      <a>josephzhang@cmu.edu</a>
+    <footer class="indent">
+      <a class="indent" target="_blank" href="mailto:josephzhang@cmu.edu"
+        >Email</a
+      >
+      <a target="_blank" href="https://www.linkedin.com/in/josephzme/"
+        >LinkedIn</a
+      >
+      <a target="_blank" href="https://www.instagram.com/josephhhz/"
+        >Instagram</a
+      >
     </footer>
     <!-- <div class="wrap">
       <div class="ball"></div>
