--- a/expanded.html
+++ b/expanded.html
@@ -55,7 +55,8 @@
       </video> -->
 
       <p class="education">
-        Joseph is a third year undergraduate studying
+        Joseph is a designer exploring interaction patterns and multimodal
+        experiences. He is a third year undergraduate studying
         <a
           class="cmu-design"
           target="blank"
@@ -64,7 +65,7 @@
         >
         and
         <a class="hci" target="blank" href="https://www.hcii.cmu.edu"
-          >Human Computer Interaction</a
+          >Human-Computer Interaction</a
         >
         at Carnegie Mellon University.
       </p>
