--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </head>
 
   <!-- <body onload="followMouse();"> -->
-  <body>
+  <body class="index">
     <main>
       <video class="thinkspace-video" playsinline loop muted>
         <source src="public/thinkspace.mp4" type="video/mp4" />
