--- a/expanded.html
+++ b/expanded.html
@@ -56,7 +56,7 @@
 
       <p class="education">
         Joseph is a designer exploring interaction patterns and multimodal
-        experiences. He is a third year undergraduate studying
+        experiences. He is a third-year undergraduate studying
         <a
           class="cmu-design"
           target="blank"
