--- a/expanded.html
+++ b/expanded.html
@@ -85,13 +85,7 @@
             href="https://www.notion.so/josephhhz/Pixel-Push-48910c3a971747b0b6fc3f31572b9984"
             >Pixel Push</a
           >
-          <br />
-          <a
-            class="reading-trends"
-            target="_blank"
-            href="https://www.notion.so/josephhhz/Reading-Trends-2c9be594b74c44e885724dc7a910e42e"
-            >Reading Trends</a
-          >
+
           <br />
           <a
             class="thinkspace"
@@ -100,15 +94,27 @@
             >Thinkspace</a
           ><br />
           <a
+            class="plume"
+            target="_blank"
+            href="https://www.notion.so/josephhhz/Plume-Assistant-d61c26e81f974c8493ebf880a0791440"
+            >Plume Assistant</a
+          ><br />
+          <a
             class="elevation-connect"
             target="_blank"
             href="https://www.notion.so/Elevation-Connect-ac95e52bf2794c74b95f29810c11a089"
             >Elevation Connect</a
           >
           <br />
+          <a
+            class="reading-trends"
+            target="_blank"
+            href="https://www.notion.so/josephhhz/Reading-Trends-2c9be594b74c44e885724dc7a910e42e"
+            >Reading Trends</a
+          >
+          <br />
           <a style="cursor: not-allowed" class="natural">Natural AI</a>
           <br />
-          <a style="cursor: not-allowed" class="plume">Plume Assistant</a>
         </div>
         <br />
         <p>Experience</p>
