--- a/index.html
+++ b/index.html
@@ -34,10 +34,7 @@
         <source src="public/pixel-push.mp4" type="video/mp4" />
         Your browser does not support HTML video.
       </video>
-      <video class="reading-trends-video" playsinline loop muted>
-        <source src="public/reading-trends.mp4" type="video/mp4" />
-        Your browser does not support HTML video.
-      </video>
+      <img class="plume-img" src="public/plume.jpg" />
       <video class="apple-video" playsinline loop muted>
         <source src="public/apple.mp4" type="video/mp4" />
         Your browser does not support HTML video.
@@ -60,15 +57,15 @@
             >interaction</a
           >,
           <a
-            class="reading-trends"
-            target="_blank"
-            href="https://www.notion.so/josephhhz/Reading-Trends-2c9be594b74c44e885724dc7a910e42e"
-            >data</a
-          >, and
-          <a
             class="thinkspace"
             target="_blank"
             href="https://www.notion.so/Thinkspace-24f3dc1c62904b0da412b0a4230cc92d"
+            >code</a
+          >, and
+          <a
+            class="plume"
+            target="_blank"
+            href="https://www.notion.so/josephhhz/Plume-Assistant-d61c26e81f974c8493ebf880a0791440"
             >conversation</a
           >. Previously at
           <a class="apple" target="blank" href="https://www.apple.com/siri/"
