--- a/expanded.html
+++ b/expanded.html
@@ -49,14 +49,28 @@
       <img class="hci-img" src="public/hci.jpg" />
       <img class="plume-img" src="public/plume.jpg" />
 
-      <!-- <video class="other-video" playsinline loop muted>
-        <source src="public/other.mp4" type="video/mp4" />
-        Your browser does not support HTML video.
-      </video> -->
-
       <p class="education">
-        Joseph is a designer exploring interaction patterns and multimodal
-        experiences. He is a third-year undergraduate studying
+        Joseph is a designer exploring multimodal experiences through
+        <a
+          class="pixel-push"
+          target="_blank"
+          href="https://www.notion.so/josephhhz/Pixel-Push-48910c3a971747b0b6fc3f31572b9984"
+          >interaction</a
+        >,
+        <a
+          class="thinkspace"
+          target="_blank"
+          href="https://www.notion.so/Thinkspace-24f3dc1c62904b0da412b0a4230cc92d"
+          >code</a
+        >, and
+        <a
+          class="plume"
+          target="_blank"
+          href="https://www.notion.so/josephhhz/Plume-Assistant-d61c26e81f974c8493ebf880a0791440"
+          >conversation</a
+        >. He believes in developing a more humane way for people to engage with
+        tech and screen-based interfaces. <br /><br />Currently, he is a
+        third-year undergraduate studying
         <a
           class="cmu-design"
           target="blank"
