--- a/index.html
+++ b/index.html
@@ -43,13 +43,9 @@
         <source src="public/natural.mp4" type="video/mp4" />
         Your browser does not support HTML video.
       </video>
-      <!-- <video class="other-video" playsinline loop muted>
-        <source src="public/other.mp4" type="video/mp4" />
-        Your browser does not support HTML video.
-      </video> -->
       <div class="landing">
         <p>
-          Joseph is a designer exploring
+          Joseph is a designer exploring multimodal experiences through
           <a
             class="pixel-push"
             target="_blank"
