--- a/expanded.html
+++ b/expanded.html
@@ -68,8 +68,9 @@
           target="_blank"
           href="https://www.notion.so/josephhhz/Plume-Assistant-d61c26e81f974c8493ebf880a0791440"
           >conversation</a
-        >. He experiments with new ways people can engage with user interfaces.
-        <br /><br />Currently, he is a third-year undergraduate studying
+        >. He experiments with new ways for people to engage with user
+        interfaces. <br /><br />Currently, he is a third-year undergraduate
+        studying
         <a
           class="cmu-design"
           target="blank"
