--- a/index.html
+++ b/index.html
@@ -25,32 +25,38 @@
 
   <!-- <body onload="followMouse();"> -->
   <body class="index">
-    <main>
+    <div class="media">
       <video class="thinkspace-video" playsinline loop muted>
         <source src="public/thinkspace.mp4" type="video/mp4" />
         Your browser does not support HTML video.
       </video>
-
       <video class="pixel-push-video" playsinline loop muted>
         <source src="public/pixel-push.mp4" type="video/mp4" />
         Your browser does not support HTML video.
       </video>
-
-      <img class="plume-img" src="public/plume.jpg" />
-
+      <video class="reading-trends-video" playsinline loop muted>
+        <source src="public/reading-trends.mp4" type="video/mp4" />
+        Your browser does not support HTML video.
+      </video>
       <video class="apple-video" playsinline loop muted>
         <source src="public/apple.mp4" type="video/mp4" />
         Your browser does not support HTML video.
       </video>
-
       <video class="natural-video" playsinline loop muted>
         <source src="public/natural.mp4" type="video/mp4" />
         Your browser does not support HTML video.
       </video>
-
-      <div class="landing">
+      <img class="elevation-church-img" src="public/elevation-church.jpg" />
+      <img class="elevation-connect-img" src="public/elevation-connect.jpg" />
+      <img class="cmu-design-img" src="public/cmu-design.jpg" />
+      <img class="hci-img" src="public/hci.jpg" />
+      <img class="plume-img" src="public/plume.jpg" />
+    </div>
+    <div class="landing">
+      <div class="row">
+        <p>Joseph Z</p>
         <p>
-          Joseph is a designer exploring multimodal experiences through
+          I am a designer exploring multimodal experiences through
           <a
             class="pixel-push"
             target="_blank"
@@ -68,24 +74,116 @@
             target="_blank"
             href="https://www.notion.so/josephhhz/Plume-Assistant-d61c26e81f974c8493ebf880a0791440"
             >conversation</a
-          >. Previously at
-          <a class="apple" target="blank" href="https://www.apple.com/siri/"
-            >Apple</a
-          >, he is now helping build
-          <a class="natural" target="_blank" href="https://www.natural.ai/"
-            >Natural AI</a
-          >.
+          >. I experiment with new ways for people to engage with user
+          interfaces. <br /><br />Currently, I'm a third-year undergraduate
+          studying
+          <a
+            class="cmu-design"
+            target="blank"
+            href="https://design.cmu.edu/programs/undergrad"
+            >Design</a
+          >
+          and
+          <a class="hci" target="blank" href="https://www.hcii.cmu.edu"
+            >Human-Computer Interaction</a
+          >
+          at Carnegie Mellon University.
         </p>
-        <br />
       </div>
-      <div class="work">
-        <a href="expanded.html">↓</a>
-      </div>
-    </main>
+      <div class="row">
+        <p>Work</p>
+        <div class="projects">
+          <a
+            class="pixel-push"
+            target="_blank"
+            href="https://www.notion.so/josephhhz/Pixel-Push-48910c3a971747b0b6fc3f31572b9984"
+            >Pixel Push</a
+          >
+          <a
+            class="thinkspace"
+            target="_blank"
+            href="https://www.notion.so/Thinkspace-24f3dc1c62904b0da412b0a4230cc92d"
+            >Thinkspace</a
+          >
+          <a
+            class="plume"
+            target="_blank"
+            href="https://www.notion.so/josephhhz/Plume-Assistant-d61c26e81f974c8493ebf880a0791440"
+            >Plume Assistant</a
+          >
+          <a
+            class="elevation-connect"
+            target="_blank"
+            href="https://www.notion.so/Elevation-Connect-ac95e52bf2794c74b95f29810c11a089"
+            >Elevation Connect</a
+          >
 
-    <!-- <div class="wrap">
-      <div class="landing ball"></div>
-    </div> -->
+          <a
+            class="reading-trends"
+            target="_blank"
+            href="https://www.notion.so/josephhhz/Reading-Trends-2c9be594b74c44e885724dc7a910e42e"
+            >Reading Trends</a
+          >
+          <a style="cursor: not-allowed" class="natural">Natural AI</a>
+        </div>
+      </div>
+      <div class="row">
+        <p>Experience</p>
+        <div>
+          <div class="experience">
+            <a class="natural" target="_blank" href="https://www.natural.ai/"
+              >Brain Technologies</a
+            >
+            <p>
+              Interface Design Intern<br />
+              09.2020 - Present
+            </p>
+          </div>
+          <div class="experience">
+            <a class="apple" target="blank" href="https://www.apple.com/siri/"
+              >Apple</a
+            >
+            <p>
+              Interaction Design Intern<br />
+              06.2020 - 08.2020
+            </p>
+          </div>
+
+          <div class="experience">
+            <a
+              class="elevation-church"
+              target="_blank"
+              href="https://www.elevationchurch.org/"
+              >Elevation Church</a
+            >
+            <p>
+              Interface Design Intern<br />
+              05.2019 - 08.2019
+            </p>
+          </div>
+        </div>
+      </div>
+      <footer class="row">
+        <span></span>
+        <div class="contact">
+          <a class="indent" target="_blank" href="mailto:josephzhang@cmu.edu"
+            >Email</a
+          >
+          <a
+            class="indent"
+            target="_blank"
+            href="https://www.linkedin.com/in/josephzme/"
+            >LinkedIn</a
+          >
+          <a
+            class="indent"
+            target="_blank"
+            href="https://www.instagram.com/josephhhz/"
+            >Instagram</a
+          >
+        </div>
+      </footer>
+    </div>
   </body>
   <script
     src="https://code.jquery.com/jquery-3.5.1.js"
