--- a/index.html
+++ b/index.html
@@ -93,38 +93,38 @@
       <div class="row">
         <p>Work</p>
         <div class="projects">
-          <a
+          <span><a
             class="pixel-push"
             target="_blank"
             href="https://www.notion.so/josephhhz/Pixel-Push-48910c3a971747b0b6fc3f31572b9984"
             >Pixel Push</a
-          >
-          <a
+          ></span>
+          <span><a
             class="thinkspace"
             target="_blank"
             href="https://www.notion.so/Thinkspace-24f3dc1c62904b0da412b0a4230cc92d"
             >Thinkspace</a
-          >
-          <a
+          ></span>
+          <span><a
             class="plume"
             target="_blank"
             href="https://www.notion.so/josephhhz/Plume-Assistant-d61c26e81f974c8493ebf880a0791440"
             >Plume Assistant</a
-          >
-          <a
+          ></span>
+          <span><a
             class="elevation-connect"
             target="_blank"
             href="https://www.notion.so/Elevation-Connect-ac95e52bf2794c74b95f29810c11a089"
             >Elevation Connect</a
-          >
+          ></span>
 
-          <a
+          <span><a
             class="reading-trends"
             target="_blank"
             href="https://www.notion.so/josephhhz/Reading-Trends-2c9be594b74c44e885724dc7a910e42e"
             >Reading Trends</a
-          >
-          <a style="cursor: not-allowed" class="natural">Natural AI</a>
+          ></span>
+          <span><a style="cursor: not-allowed" class="natural">Natural AI</a>
         </div>
       </div>
       <div class="row">
@@ -157,7 +157,7 @@
               >Elevation Church</a
             >
             <p>
-              Interface Design Intern<br />
+              UX Design Intern<br />
               05.2019 - 08.2019
             </p>
           </div>
