--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   <!-- <body onload="followMouse();"> -->
   <body class="index">
     <div class="media">
+
       <video class="thinkspace-video" playsinline loop muted>
         <source src="public/thinkspace.mp4" type="video/mp4" />
         Your browser does not support HTML video.
@@ -47,6 +48,8 @@
         Your browser does not support HTML video.
       </video>
       <img class="elevation-church-img" src="public/elevation-church.jpg" />
+      <img class="tedx-img" src="public/tedx.jpg" />
+      <img class="aiga-img" src="public/aiga.jpg" />
       <img class="elevation-connect-img" src="public/elevation-connect.jpg" />
       <img class="cmu-design-img" src="public/cmu-design.jpg" />
       <img class="hci-img" src="public/hci.jpg" />
@@ -75,7 +78,7 @@
             href="https://www.notion.so/josephhhz/Plume-Assistant-d61c26e81f974c8493ebf880a0791440"
             >conversation</a
           >. I experiment with new ways for people to engage with user
-          interfaces. <br /><br />Currently, I'm a third-year undergraduate
+          interfaces. Through my work, I strive to humanize complex ideas and forms of interaction. <br /><br />Currently, I'm a third-year undergraduate
           studying
           <a
             class="cmu-design"
@@ -93,12 +96,16 @@
       <div class="row">
         <p>Work</p>
         <div class="projects">
+          
+          <span><a style="cursor: not-allowed" class="aiga">AIGA & Hue</a></span>
+
           <span><a
             class="pixel-push"
             target="_blank"
             href="https://www.notion.so/josephhhz/Pixel-Push-48910c3a971747b0b6fc3f31572b9984"
             >Pixel Push</a
           ></span>
+          <span><a style="cursor: not-allowed" class="tedx">TEDxCMU: Catalyst</a></span>
           <span><a
             class="thinkspace"
             target="_blank"
