add catalyst link and resume

--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
   <!-- <body onload="followMouse();"> -->
   <body class="index">
     <div class="media">
-
       <video class="thinkspace-video" playsinline loop muted>
         <source src="public/thinkspace.mp4" type="video/mp4" />
         Your browser does not support HTML video.
@@ -78,8 +77,9 @@
             href="https://www.notion.so/josephhhz/Plume-Assistant-d61c26e81f974c8493ebf880a0791440"
             >conversation</a
           >. I experiment with new ways for people to engage with user
-          interfaces. Through my work, I strive to humanize complex ideas and forms of interaction. <br /><br />Currently, I'm a third-year undergraduate
-          studying
+          interfaces. Through my work, I strive to humanize complex ideas and
+          forms of interaction. <br /><br />Currently, I'm a third-year
+          undergraduate studying
           <a
             class="cmu-design"
             target="blank"
@@ -96,42 +96,59 @@
       <div class="row">
         <p>Work</p>
         <div class="projects">
-          
-          <span><a style="cursor: not-allowed" class="aiga">AIGA & Hue</a></span>
+          <span
+            ><a href="https://www.catalyst.tedxcmu.org" class="tedx"
+              >TEDxCMU: Catalyst</a
+            ></span
+          >
+          <span
+            ><a
+              class="thinkspace"
+              target="_blank"
+              href="https://www.notion.so/Thinkspace-24f3dc1c62904b0da412b0a4230cc92d"
+              >Thinkspace</a
+            ></span
+          >
+          <span
+            ><a
+              class="plume"
+              target="_blank"
+              href="https://www.notion.so/josephhhz/Plume-Assistant-d61c26e81f974c8493ebf880a0791440"
+              >Plume Assistant</a
+            ></span
+          >
+          <span
+            ><a
+              class="elevation-connect"
+              target="_blank"
+              href="https://www.notion.so/Elevation-Connect-ac95e52bf2794c74b95f29810c11a089"
+              >Elevation Connect</a
+            ></span
+          >
 
-          <span><a
-            class="pixel-push"
-            target="_blank"
-            href="https://www.notion.so/josephhhz/Pixel-Push-48910c3a971747b0b6fc3f31572b9984"
-            >Pixel Push</a
-          ></span>
-          <span><a style="cursor: not-allowed" class="tedx">TEDxCMU: Catalyst</a></span>
-          <span><a
-            class="thinkspace"
-            target="_blank"
-            href="https://www.notion.so/Thinkspace-24f3dc1c62904b0da412b0a4230cc92d"
-            >Thinkspace</a
-          ></span>
-          <span><a
-            class="plume"
-            target="_blank"
-            href="https://www.notion.so/josephhhz/Plume-Assistant-d61c26e81f974c8493ebf880a0791440"
-            >Plume Assistant</a
-          ></span>
-          <span><a
-            class="elevation-connect"
-            target="_blank"
-            href="https://www.notion.so/Elevation-Connect-ac95e52bf2794c74b95f29810c11a089"
-            >Elevation Connect</a
-          ></span>
+          <span
+            ><a
+              class="reading-trends"
+              target="_blank"
+              href="https://www.notion.so/josephhhz/Reading-Trends-2c9be594b74c44e885724dc7a910e42e"
+              >Reading Trends</a
+            ></span
+          >
+          <span
+            ><a style="cursor: not-allowed" class="natural">Natural AI</a></span
+          >
 
-          <span><a
-            class="reading-trends"
-            target="_blank"
-            href="https://www.notion.so/josephhhz/Reading-Trends-2c9be594b74c44e885724dc7a910e42e"
-            >Reading Trends</a
-          ></span>
-          <span><a style="cursor: not-allowed" class="natural">Natural AI</a>
+          <span
+            ><a
+              class="pixel-push"
+              target="_blank"
+              href="https://www.notion.so/josephhhz/Pixel-Push-48910c3a971747b0b6fc3f31572b9984"
+              >Pixel Push</a
+            ></span
+          >
+          <span
+            ><a style="cursor: not-allowed" class="aiga">AIGA & Hue</a></span
+          >
         </div>
       </div>
       <div class="row">
@@ -173,9 +190,7 @@
       <footer class="row">
         <span></span>
         <div class="contact">
-          <a class="indent" target="_blank" href="mailto:josephzhang@cmu.edu"
-            >Email</a
-          >
+          <a class="indent" target="_blank" href="resume-zhang.pdf">Resume</a>
           <a
             class="indent"
             target="_blank"
