new bio + link updates

--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
             >conversation</a
           >. I experiment with new ways for people to engage with user
           interfaces. Through my work, I strive to humanize complex ideas and
-          forms of interaction. <br /><br />Currently, I'm a third-year
-          undergraduate studying
+          questions. <br /><br />Currently, I'm a third-year undergraduate
+          studying
           <a
             class="cmu-design"
             target="blank"
@@ -97,7 +97,10 @@
         <p>Work</p>
         <div class="projects">
           <span
-            ><a href="https://www.catalyst.tedxcmu.org" class="tedx"
+            ><a
+              target="_blank"
+              href="https://www.catalyst.tedxcmu.org"
+              class="tedx"
               >TEDxCMU: Catalyst</a
             ></span
           >
@@ -161,6 +164,15 @@
             <p>
               Interface Design Intern<br />
               09.2020 - Present
+            </p>
+          </div>
+          <div class="experience">
+            <a class="natural" target="_blank" href="https://www.natural.ai/"
+              >TEDxCMU</a
+            >
+            <p>
+              Head of Design<br />
+              05.2020 - Present
             </p>
           </div>
           <div class="experience">
