remove non-case-study projects

--- a/index.html
+++ b/index.html
@@ -96,14 +96,14 @@
       <div class="row">
         <p>Work</p>
         <div class="projects">
-          <span
+          <!-- <span
             ><a
               target="_blank"
               href="https://www.catalyst.tedxcmu.org"
               class="tedx"
               >TEDxCMU: Catalyst</a
             ></span
-          >
+          > -->
           <span
             ><a
               class="thinkspace"
@@ -114,18 +114,18 @@
           >
           <span
             ><a
-              class="plume"
-              target="_blank"
-              href="https://www.notion.so/josephhhz/Plume-Assistant-d61c26e81f974c8493ebf880a0791440"
-              >Plume Assistant</a
-            ></span
-          >
-          <span
-            ><a
               class="elevation-connect"
               target="_blank"
               href="https://www.notion.so/Elevation-Connect-ac95e52bf2794c74b95f29810c11a089"
               >Elevation Connect</a
+            ></span
+          >
+          <span
+            ><a
+              class="plume"
+              target="_blank"
+              href="https://www.notion.so/josephhhz/Plume-Assistant-d61c26e81f974c8493ebf880a0791440"
+              >Plume Assistant</a
             ></span
           >
 
@@ -137,9 +137,6 @@
               >Reading Trends</a
             ></span
           >
-          <span
-            ><a style="cursor: not-allowed" class="natural">Natural AI</a></span
-          >
 
           <span
             ><a
@@ -149,9 +146,9 @@
               >Pixel Push</a
             ></span
           >
-          <span
+          <!-- <span
             ><a style="cursor: not-allowed" class="aiga">AIGA & Hue</a></span
-          >
+          > -->
         </div>
       </div>
       <div class="row">
@@ -166,15 +163,7 @@
               09.2020 - Present
             </p>
           </div>
-          <div class="experience">
-            <a class="natural" target="_blank" href="https://www.natural.ai/"
-              >TEDxCMU</a
-            >
-            <p>
-              Head of Design<br />
-              05.2020 - Present
-            </p>
-          </div>
+
           <div class="experience">
             <a class="apple" target="blank" href="https://www.apple.com/siri/"
               >Apple</a
