--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
             >interaction</a
           >,
           <a
-            class="thinkspace"
+            class="aiga"
             target="_blank"
-            href="https://www.notion.so/Thinkspace-24f3dc1c62904b0da412b0a4230cc92d"
-            >code</a
+            href="https://www.notion.so/josephhhz/AIGA-Hue-38cd5f40c38c464ab1c5885468a1a3de"
+            >data</a
           >, and
           <a
             class="plume"
@@ -104,6 +104,14 @@
               >TEDxCMU: Catalyst</a
             ></span
           > -->
+          <span
+            ><a
+              target="_blank"
+              href="https://www.notion.so/josephhhz/AIGA-Hue-38cd5f40c38c464ab1c5885468a1a3de"
+              class="aiga"
+              >AIGA & Hue</a
+            ></span
+          >
           <span
             ><a
               class="thinkspace"
@@ -146,9 +154,6 @@
               >Pixel Push</a
             ></span
           >
-          <!-- <span
-            ><a style="cursor: not-allowed" class="aiga">AIGA & Hue</a></span
-          > -->
         </div>
       </div>
       <div class="row">
