--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             class="plume"
             target="_blank"
             href="https://www.notion.so/josephhhz/Plume-Assistant-d61c26e81f974c8493ebf880a0791440"
-            >voice</a
+            >conversation</a
           >, and
           <a
             class="pixel-push"
