--- a/index.html
+++ b/index.html
@@ -58,28 +58,10 @@
       <div class="row">
         <p>Joseph Z</p>
         <p>
-          I'm a designer exploring interaction through
-          <a
-            class="aiga"
-            target="_blank"
-            href="https://www.notion.so/josephhhz/AIGA-Hue-38cd5f40c38c464ab1c5885468a1a3de"
-            >data</a
-          >,
-          <a
-            class="plume"
-            target="_blank"
-            href="https://www.notion.so/josephhhz/Plume-Assistant-d61c26e81f974c8493ebf880a0791440"
-            >conversation</a
-          >, and
-          <a
-            class="pixel-push"
-            target="_blank"
-            href="https://www.notion.so/josephhhz/Pixel-Push-48910c3a971747b0b6fc3f31572b9984"
-            >collaboration</a
-          >. I experiment with new ways for people to engage with user
-          interfaces. Through my work, I strive to humanize complex ideas and
-          questions. <br /><br />Currently, I'm a third-year undergraduate
-          studying
+          I'm a designer exploring multimodal interaction and new ways for
+          people to engage with user interfaces. Through my work, I strive to
+          humanize complex ideas and questions. <br /><br />Currently, I'm a
+          third-year undergraduate studying
           <a
             class="cmu-design"
             target="blank"
